Fixed setup and desktop file

--- a/qtumblr.desktop
+++ b/qtumblr.desktop
@@ -3,7 +3,7 @@ Categories=Application;Network;
 Comment[en_US]=Desktop client developed in Qt for tumblr
 Comment=Desktop client developed in Qt for tumblr
 Comment[es]=Cliente de escritorio multiplataforma desarrollado en wxpython para tumblr
-Exec=qtumblr-client.py
+Exec=opentumblr-qt-client.py
 GenericName[en_US]=Tumblr Client based on Opentumblr
 GenericName=Tumblr Client based on Opentumblr
 GenericName[es]=\sCliente Tumblr
