Adding #!/usr/bin/python

--- a/opentumblr-qt.desktop
+++ b/opentumblr-qt.desktop
@@ -7,7 +7,7 @@ Exec=opentumblr-qt-client.py
 GenericName[en_US]=Tumblr Client based on Opentumblr
 GenericName=Tumblr Client based on Opentumblr
 GenericName[es]=\sCliente Tumblr
-Icon=opentumblr
+Icon=/usr/share/pixmaps/opentumblr-qt.xpm
 MimeType=
 Name[en_US]=Qt Tumblr Client
 Name=Qt Tumblr Client
